# HFE

./: .gitignore  README.md  requirements.txt
Code/: main.py  main2.py
ai_docs/: 01_system_architecture.md  02_mediapipe_pose_analysis.md  03_api_endpoints.md  04_frontend_components.md  README.md
code/: check.ipynb  check.py  copy_originals_by_pose.py  mediapipe_estimation.ipynb  undetected_images.txt
note/: Meet-0714.md  人因工程計畫.md
web/backend/: .gitignore  app.db  config.py  pyproject.toml  start.py
web/backend/app/: __init__.py  views.py
web/frontend/: app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js
web/frontend/assets/css/: global.css
web/frontend/pages/: index.vue  video.vue
